--- a/.github/workflows/change_pr_name.yaml
+++ b/.github/workflows/change_pr_name.yaml
@@ -7,6 +7,8 @@ on:
 
 jobs:
   migration-check:
+    runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v2
