--- a/.github/workflows/change_pr_name.yaml
+++ b/.github/workflows/change_pr_name.yaml
@@ -1,12 +1,15 @@
 name: "migration check"
 
 on:
+  workflow_dispatch: {}
   pull_request:
     branches:
-      - "!main"
+      - "test"
 
 jobs:
   migration-check:
+    runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v2
