--- a/.github/workflows/change_pr_name.yaml
+++ b/.github/workflows/change_pr_name.yaml
@@ -25,6 +25,7 @@ jobs:
         uses: actions/github-script@v6
         id: migration-required
         with:
+          result-encoding: string
           script: |
             const migMatch = 'steps.pr.outputs.pr_body'.match(/Migration Steps:\n- ./);
             return !!migMatch;
