--- a/.github/workflows/change_pr_name.yaml
+++ b/.github/workflows/change_pr_name.yaml
@@ -25,11 +25,10 @@ jobs:
         uses: actions/github-script@v6
         id: migration-required
         with:
-          result-encoding: string
           script: |
             const migMatch = 'steps.pr.outputs.pr_body'.match(/Migration Steps:\n- ./);
             return !!migMatch;
 
       - name: Echo result
-        run: echo "${ steps.migration-required.outputs.result }"
+        run: echo "${{ steps.migration-required.outputs.result }}"
 
