--- a/.github/workflows/change_pr_name.yaml
+++ b/.github/workflows/change_pr_name.yaml
@@ -24,11 +24,13 @@ jobs:
       - name: Check if migration required
         uses: actions/github-script@v6
         id: migration-required
+        env:
+          PR_BODY: ${{ steps.pr.outputs.pr_body }}
         with:
           script: |
-            const migMatch = 'steps.pr.outputs.pr_body'.match(/Migration Steps:\n- ./);
+            const migMatch = process.env.PR_BODY.match(/## Migration Steps(\n|\r|\r\n)- ./);
             return !!migMatch;
 
       - name: Echo result
-        run: echo "${ steps.migration-required.outputs.result }"
+        run: echo "${{ steps.migration-required.outputs.result }}"
 
