--- a/.github/workflows/change_pr_name.yaml
+++ b/.github/workflows/change_pr_name.yaml
@@ -7,9 +7,7 @@ on:
       - opened
       - reopened
       - edited
-    branches-ignore:
-      - platdev
-      - appdev
+    branches:
       - main
 
 jobs:
