--- a/.github/workflows/change_pr_name.yaml
+++ b/.github/workflows/change_pr_name.yaml
@@ -3,8 +3,12 @@ name: "migration check"
 on:
   workflow_dispatch: {}
   pull_request:
+    types:
+      - opened
+      - reopened
+      - edited
     branches:
-      - "test"
+      - main
 
 jobs:
   migration-check:
